# PyBitEngine

./: .gitignore  LICENSE  README.md  __init__.py  index.html  pyproject.toml  pyproject.txt
PyBitEngine/: PE_CAMERA.py  PE_DRAW.py  PE_KEYS.py  PE_PAKER.py  PE_TIME.py  PE_WINDOW.py  __init__.py
PyBitEngine/licenses/: PySDL2_License.txt
src/: PE_CAMERA.py  PE_DRAW.py  PE_PAKER.py  PE_WINDOW.py  __init__.py
src/licenses/: cx_Freeze_license.txt
